<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/pick_difficulty"/>

        <RadioGroup
            android:id="@+id/difficulty_group"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/easy_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/easy"/>

            <RadioButton
                android:id="@+id/medium_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"/>

            <RadioButton
                android:id="@+id/hard_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"/>

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/animals_button"
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:background="@drawable/round_button"
                android:text="@string/animals"/>

            <Button
                android:id="@+id/human_button"
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:background="@drawable/round_button"
                android:text="@string/humans"/>

            <Button
                android:id="@+id/cars_button"
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:background="@drawable/round_button"
                android:text="@string/cars"/>

            <Button
                android:id="@+id/math_button"
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:background="@drawable/round_button"
                android:text="@string/math"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="275dp"
        android:src="@drawable/flash_cards_home"/>

</LinearLayout>
